--- a/style.css
+++ b/style.css
@@ -322,9 +322,22 @@ box-shadow: none;
 @media screen and (min-width: 768px) {
 	.site-content {
     border-right: 1px solid #ededed;
-	}
+    padding-top: 5px;
+  }
+
 .themonic-nav ul.nav-menu, .themonic-nav div.nav-menu > ul {
     background-color: transparent;
      border-top: 0px
 	}
+}
+
+.pt-cv-wrapper .btn {
+    border-radius: 0px;
+}
+
+.pt-cv-wrapper .btn-success:hover {
+    color: #007bc1;
+    background-color: #fff;
+    border-color: #16A1E7;
+    transition: .3s ease 0s;
 }
